[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/r1.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/CharacterLogic.gd" type="Script" id=2]
[ext_resource path="res://scripts/MovesLogic.gd" type="Script" id=3]
[ext_resource path="res://assets/fight/r3.png" type="Texture" id=4]
[ext_resource path="res://assets/music/battletheme-Adventureahead-v2.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/fight/bg/2.png" type="Texture" id=6]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/PREL_LOGO_SPARKLE_PO0.wav" type="AudioStream" id=8]
[ext_resource path="res://scripts/FightLogic.gd" type="Script" id=9]
[ext_resource path="res://assets/gui/HPBar.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/HPFill.png" type="Texture" id=11]
[ext_resource path="res://assets/gui/HPOver.png" type="Texture" id=12]
[ext_resource path="res://scripts/HUDLogic.gd" type="Script" id=13]
[ext_resource path="res://assets/fonts/Segoe UI Bold.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=3]
size = 20
extra_spacing_char = 2
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "pAppear"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.248876 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 0 ), Vector2( 120, -25 ), Vector2( 0, 0 ) ]
}

[node name="Fight" type="Node2D"]
script = ExtResource( 9 )

[node name="BattleBG" type="Sprite" parent="."]
position = Vector2( 485, 285 )
scale = Vector2( 1.2, 1.15 )
texture = ExtResource( 6 )

[node name="Characters" type="Node" parent="."]
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 7 )]
z_index = 1
script = ExtResource( 13 )

[node name="Bar1" type="TextureProgress" parent="HUD"]
margin_left = 836.0
margin_top = 5.0
margin_right = 955.0
margin_bottom = 32.0
value = 50.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="HPShow" type="Label" parent="HUD/Bar1"]
margin_left = 73.0
margin_top = -2.0
margin_right = 114.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2
valign = 1

[node name="Bar2" type="TextureProgress" parent="HUD"]
margin_left = 836.0
margin_top = 33.0
margin_right = 955.0
margin_bottom = 60.0
value = 50.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="HPShow" type="Label" parent="HUD/Bar2"]
margin_left = 73.0
margin_top = -2.0
margin_right = 114.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2
valign = 1

[node name="Bar3" type="TextureProgress" parent="HUD"]
margin_left = 836.0
margin_top = 61.0
margin_right = 955.0
margin_bottom = 88.0
value = 50.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="HPShow" type="Label" parent="HUD/Bar3"]
margin_left = 73.0
margin_top = -2.0
margin_right = 114.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2
valign = 1

[node name="Bar4" type="TextureProgress" parent="HUD"]
margin_left = 836.0
margin_top = 89.0
margin_right = 955.0
margin_bottom = 116.0
value = 50.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="HPShow" type="Label" parent="HUD/Bar4"]
margin_left = 73.0
margin_top = -2.0
margin_right = 114.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 2
valign = 1

[node name="PartyAppear" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PartyAppear"]
anims/RESET = SubResource( 1 )
anims/pAppear = SubResource( 2 )

[node name="Moves" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CharacterTimers" type="Node" parent="."]

[node name="1" type="Timer" parent="CharacterTimers"]
wait_time = 6.0

[node name="2" type="Timer" parent="CharacterTimers"]
wait_time = 6.0

[node name="3" type="Timer" parent="CharacterTimers"]
wait_time = 6.0

[node name="4" type="Timer" parent="CharacterTimers"]
wait_time = 6.0

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="R3" type="Sprite" parent="."]
visible = false
position = Vector2( 480.25, 272 )
scale = Vector2( 1.12485, 1.13333 )
texture = ExtResource( 4 )

[node name="R1" type="Sprite" parent="."]
visible = false
position = Vector2( 481, 271.75 )
scale = Vector2( 0.853333, 0.806667 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="SFX" type="Node" parent="."]

[node name="BattleMusic" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2( 480, 272 )
stream = ExtResource( 5 )
volume_db = -2.0
autoplay = true

[node name="AttackReady" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2( 480, 272 )
stream = ExtResource( 8 )

[connection signal="ready" from="Characters" to="." method="_on_Characters_ready"]
[connection signal="timeout" from="CharacterTimers/1" to="Moves" method="_on_1_timeout"]
[connection signal="timeout" from="CharacterTimers/2" to="Moves" method="_on_2_timeout"]
[connection signal="timeout" from="CharacterTimers/3" to="Moves" method="_on_3_timeout"]
[connection signal="timeout" from="CharacterTimers/4" to="Moves" method="_on_4_timeout"]
[connection signal="timeout" from="TurnTimer" to="Moves" method="_on_TurnTimer_timeout"]
